Refactor MySQL volume configuration to use existing PersistentVolumeClaim

--- a/my-db.yml
+++ b/my-db.yml
@@ -17,11 +17,7 @@ spec:
       containers:
       - name: mysql
         image: abdelrahman2arafa/mysql_coffe
-  volumeClaimTemplates:
-  - metadata:
-      name: mysql-persistent-storage
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      resources:
-        requests:
-          storage: 1Gi
+  volumes:
+  - name: mysql-persistent-storage
+    persistentVolumeClaim:
+      claimName: mysql-pvc
