``` No code changes made. ```

--- a/deployment.yml
+++ b/deployment.yml
@@ -16,8 +16,8 @@ spec:
         image: abdelrahman2arafa/node.js_coffe
         resources:
           limits:
-            memory: "128Mi"
-            cpu: "500m"
+            memory: "256Mi"
+            cpu: "1"
         ports:
         - containerPort: 80
         env:
