--- a/deployment.yml
+++ b/deployment.yml
@@ -14,6 +14,8 @@ spec:
       containers:
       - name: mycoffeeapp
         image: abdelrahman2arafa/node.js_coffe
+        securityContext:
+          runAsUser: 0
         resources:
           limits:
             memory: "256Mi"
