--- a/deployment.yml
+++ b/deployment.yml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: mycoffeeapp
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: mycoffeeapp
@@ -18,8 +19,6 @@ spec:
           limits:
             memory: "256Mi"
             cpu: "1"
-        ports:
-        - containerPort: 80
         env:
         - name: APP_HOST
           valueFrom:
